<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.88"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.88" >

            <org.opencv.android.JavaCameraView
                android:id="@+id/tutorial3_activity_java_surface_view"
                android:layout_width="646dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="145dp"
                android:layout_height="145dp"
                android:src="#5eff0000"
                android:layout_gravity="right"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1" />

            <ToggleButton
                android:id="@+id/toggleButton1"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/STrain"
                android:textOff="@string/STrain"
                android:textOn="@string/SStopTrain"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignLeft="@+id/back_button" />

            <TextView
                android:id="@+id/textViewState"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="@string/SIdle"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginRight="71dp"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@+id/toggleButton1" />

            <TextView
                android:id="@+id/textView1"
                android:lines="1"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.71"
                android:text="@string/PersonName"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:elegantTextHeight="false"
                android:layout_marginBottom="3dp"
                android:minWidth="150dp" />

            <ToggleButton
                android:id="@+id/buttonSearch"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/SSearch"
                android:textOff="@string/SSearch"
                android:textOn="@string/SStopSearch"
                android:singleLine="true"
                android:layout_below="@+id/back_button"
                android:layout_alignParentLeft="true" />

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/save_btn"
                android:layout_above="@+id/toggleButton1"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="27dp" />

        </RelativeLayout>

    </LinearLayout>
    
</LinearLayout>